--- a/Regression-Project-July2014-leifulstrup.Rmd
+++ b/Regression-Project-July2014-leifulstrup.Rmd
@@ -36,10 +36,9 @@ The drag area and drag coefficients can vary by multiples and create major diffe
 
 The exploratory data analysis below explores the relationship between MPG and transmission type by first exploring the relationships between MPG and Weight, MPG and Horsepower (HP), Quarter Mile time vs HP, and Quarter Mile time vs Power Ratio (Weight/HP).  In each case the data are plotted noted whether the car has an automatic (am=0) or manual transmission (am=1).  The analysis shows a number of differences between the automatic and manual car performance but also a number of overlaps in physical parameters where the data show little variaion between the two types of transmissions.  
 
-The most striking diagram "MPG vs HP" seems to show that manual transmission cars are on a trend line of ~4 MPG superior performance when horsepower is the assumed driver.
+The most striking diagram "MPG vs HP" seems to show that manual transmission cars are on a trend line of ~4 MPG superior performance when horsepower is the assumed factor affecting MPG; however, the data is limited and high horsepower manual transmission cars are relatively low weight cars (sports cars) vs. the automatic transmission set.
 
-The 13 of 32 manual transmission cars average 24.39 mpg (with a standard deviation of 6.17) vs the automatics which are 19 of 32 cars and average 17.15 mpg (with a standard deviation of 3.834); however, it is also easy to see on the MPG vs Weight chart that the majority of the manual transmission cars are the much lighter cars.  11 of the 13 manual transmission cars are below 3000 lbs while only 1 of the 19 automatic cars is below 3000 lbs.  The MPG vs Weight trend lines would lead one to the conclusion that manual transmissions have much worse mpg than automatic for cars above 3000 lbs but again there are only 2 of 13 data points in that region.
-
+The 13 of 32 manual transmission cars average 24.39 mpg (with a standard deviation of 6.17) vs the automatics which are 19 of 32 cars and average 17.15 mpg (with a standard deviation of 3.834); however, it is also easy to see on the MPG vs Weight chart that the majority of the manual transmission cars are the much lighter cars.  11 of the 13 manual transmission cars are below 3000 lbs while only 1 of the 19 automatic cars is below 3000 lbs.  The MPG vs Weight trend lines would lead one to the conclusion that manual transmissions have much worse mpg than automatic for cars above 3000 lbs but again there are only 2 of 13 data points in that region.  The 95% (t-test) intervals for automatic is 8.7 mpg to 25.59 mpg and manual is 10.82 mpg to 38.0 mpg.  The mean weight of the manual transmission cars is 64% of the automatic cars.
 
 
 ##Exploratory Data Analysis
@@ -51,19 +50,25 @@ require(car) # this package includes the function scatterplot() which is useful 
 
 require(graphics)
 
+data(mtcars) # confirm this is refreshed
+
+# do a quick check of the relationships using the pairs() function to display
+pairs(mtcars, main = "mtcars data")
+
 # do basic analysis on the data set
 autoMeanMPG <- mean(mtcars[mtcars$am == 0,]$mpg)  # am=0 automatic transmission
 autosdMPG <- sd(mtcars[mtcars$am == 0,]$mpg)  # am=0 automatic transmission
 nauto <- nrow(mtcars[mtcars$am == 0,])
+automaticRange <- autoMeanMPG+c(-1,1)*qt(.975, df=nauto-2)*autosdMPG # 95% confidence range
+wtMeanauto <- mean(mtcars[mtcars$am == 0,]$wt)
 
 manualMeanMPG <- mean(mtcars[mtcars$am == 1,]$mpg)  # am=1 automatic transmission
 manualsdMPG <- sd(mtcars[mtcars$am == 1,]$mpg)   # am=1 automatic transmission
 nmanual <- nrow(mtcars[mtcars$am == 1,])
+manualRange <- manualMeanMPG+c(-1,1)*qt(.975, df=nmanual-2)*manualsdMPG # 95% confidence range
+wtMeanmanual <- mean(mtcars[mtcars$am == 1,]$wt)
 
-print(paste("Automatic Transmission - Mean MPG:", round(autoMeanMPG, digits =3)))
-
-# do a quick check of the relationships using the pairs() function to display
-pairs(mtcars, main = "mtcars data")
+manualWTtoautoWTratio <- wtMeanmanual/wtMeanauto
 
 # dive in and start looking at relationships visually
 scatterplot(mpg ~ wt | am, data=mtcars, xlab="Weight (lb/1000)", ylab="Miles Per Gallon", main="MPG vs Weight\n 1974 Motor Trend US magazine\n (0: automatic transmission, 1: manual transmission)", labels=row.names(mtcars), legend.coords="topright", smoother=FALSE)
@@ -88,9 +93,42 @@ mtcars$QuarterMileTimeEstimate <- 7.3571*((mtcars$wt*1000)/mtcars$hp)^(0.2574)
 mtcars$HPestimate <- (mtcars$wt*1000)/(mtcars$qsec/7.3571)^3.885
 mtcars$HPestimateToActualHPRatio <- mtcars$HPestimate/mtcars$hp
 
+
+# test weight (wt) as the best predictor of MPG
+summary(model1auto <- lm(mpg ~ wt, data=mtcars[mtcars$am==0,])) # test manual relationship to weight
+confint(model1auto)
+summary(model1manual <- lm(mpg ~ wt, data=mtcars[mtcars$am==1,])) # test automatic relationship to weight
+confint(model1manual)
+summary(model1 <- lm(mpg ~ wt, data=mtcars))
+confint(model1)
+#plot(mtcars$wt, model1$residuals)
+#abline(h=0)
+par(mfrow=c(2,2))
+plot(model1)
+
+#test horsepower(hp) as the best predictor of MPG
+summary(model2auto <- lm(mpg ~ hp, data=mtcars[mtcars$am==0,])) # test manual relationship to hp
+confint(model2auto)
+summary(model2manual <- lm(mpg ~ hp, data=mtcars[mtcars$am==1,])) # test automatic relationship to hp
+confint(model2manual)
+summary(model2 <- lm(mpg ~ hp, data=mtcars))
+confint(model2)
+#plot(mtcars$hp, model2$residuals)
+#abline(h=0)
+par(mfrow=c(2,2))
+plot(model2)
+
+# source "R in Action" by Robert Kabacoff, page 186-188
+# recommends that one explore the interrelationship between wt and hp together as a factor
+# so...
+fithpANDwt <- lm(mpg ~ hp + wt + hp:wt, data = mtcars)
+summary(fithpANDwt)
+plot(effect("hp:wt", fithpANDwt,list(wt=c(2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0))), multiline=TRUE)
+
 ```
 
 ##Conclusions
+
 
 
 
