--- a/Regression-Project-July2014-leifulstrup.Rmd
+++ b/Regression-Project-July2014-leifulstrup.Rmd
@@ -123,6 +123,8 @@ plot(model2)
 # so...
 fithpANDwt <- lm(mpg ~ hp + wt + hp:wt, data = mtcars)
 summary(fithpANDwt)
+
+require(effects)
 plot(effect("hp:wt", fithpANDwt,list(wt=c(2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0))), multiline=TRUE)
 
 ```
